@@ -160,11 +160,12 @@ int handle_gdb_valgrind_command (char* mon, OutputSink* sink_wanted_at_return)
 
       VG_(gdb_printf) (
 "general valgrind monitor commands:\n"
-"  help [debug]             : monitor command help. With debug: + debugging commands\n"
+"  help [debug]            : monitor command help. With debug: + debugging commands\n"
 "  v.wait [<ms>]           : sleep <ms> (default 0) then continue\n"
 "  v.info all_errors       : show all errors found so far\n"
 "  v.info last_error       : show last error found\n"
 "  v.info n_errs_found     : show the nr of errors found so far\n"
+"  v.info open_fds         : show open file descriptors (only if --track-fds=yes)\n"
 "  v.kill                  : kill the Valgrind process\n"
 "  v.set gdb_output        : set valgrind output to gdb\n"
 "  v.set log_output        : set valgrind output to log\n"
@@ -239,7 +240,7 @@ int handle_gdb_valgrind_command (char* mon, OutputSink* sink_wanted_at_return)
       wcmd = strtok_r (NULL, " ", &ssaveptr);
       switch (kwdid = VG_(keyword_id) 
               ("all_errors n_errs_found last_error gdbserver_status memory"
-               " scheduler",
+               " scheduler open_fds",
                wcmd, kwd_report_all)) {
       case -2:
       case -1: 
@@ -280,6 +281,15 @@ int handle_gdb_valgrind_command (char* mon, OutputSink* sink_wanted_at_return)
          break;
       case  5: /* scheduler */
          VG_(show_sched_status) ();
+         ret = 1;
+         break;
+      case  6: /* open_fds */
+         if (VG_(clo_track_fds))
+            VG_(show_open_fds) ("");
+         else
+            VG_(gdb_printf)
+               ("Valgrind must be started with --track-fds=yes"
+                " to show open fds\n");
          ret = 1;
          break;
       default:
